...
        startDate = "2023-11-16",
        endDate = "2023-11-16",
        remoteId = "remote_1",
        eventDay = "16",
        speakers = listOf(
            SessionSpeakersPresentationModel(
                name = "John Doe",
                speakerImage = "",
                twitterHandle = "johndoe"
            )
        )
    ),
    SessionPresentationModel(
...
        startDate = "2023-11-16",
        endDate = "2023-11-16",
        remoteId = "remote_2",
        eventDay = "16",
        speakers = listOf(
            SessionSpeakersPresentationModel(
                name = "Jane Smith",
                speakerImage = "",
                twitterHandle = "janesmith"
            )
        )
    )
)
...
